# Scrapy_ScrapeOps_template

./: .template_env  README.md  pyproject.toml
my_project/my_project/: settings.py
my_project/my_project/spiders/: my_spider.py
